# rover

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  important_commands.txt  out.txt
notebooks/: cmd_vel_analysis.ipynb
ros2_ws/src/bringup/: LICENSE  package.xml  setup.py
ros2_ws/src/bringup/bringup/: rover.launch.py
ros2_ws/src/bringup/config/: mid360_fastlio2.yaml  nav2_params_fast_lio2_costmap_projection.yaml  nav2_params_fast_lio2_main.yaml  nav2_params_fast_lio2_nav2.yaml  nav2_params_livox.yaml  slam_toolbox_async.yaml  slam_toolbox_async_localization.yaml
ros2_ws/src/bringup/launch/: costmap_projection.launch.py  costmap_projection_test.launch.py  fast_lio2_nav2.launch.py  fastlio_shadow.launch.py  jetson.launch.py  lio_ekf_deskew_costmap_projection.launch.py  livox_scan.launch.py  mapping.launch.py  phase3_fast_lio2_nav2.launch.py  pi_fast_lio2_costmap_projection_nav2.launch.py  pi_fast_lio2_nav2.launch.py  pi_fast_lio2_nav2_main.launch.py  pi_nav2_livox.launch.py  rover.launch.py  scan_to_map_costmap_projection.launch.py  scan_to_map_deskew_costmap_projection.launch.py  scan_to_map_primary_odom.launch.py  scan_to_scan_icp.launch.py
ros2_ws/src/bringup/urdf/: rover.urdf
ros2_ws/src/custom_fastlio_preprocess/: CMakeLists.txt  package.xml
ros2_ws/src/custom_fastlio_preprocess/config/: preprocess.yaml
ros2_ws/src/custom_fastlio_preprocess/include/custom_fastlio_preprocess/: preprocess_node.hpp
ros2_ws/src/custom_fastlio_preprocess/launch/: preprocess.launch.py
ros2_ws/src/custom_fastlio_preprocess/src/: preprocess_node.cpp
ros2_ws/src/custom_icp_odom/: CMakeLists.txt  package.xml
ros2_ws/src/custom_icp_odom/config/: icp_odom.yaml
ros2_ws/src/custom_icp_odom/include/custom_icp_odom/: icp_odom_node.hpp  icp_utils.hpp
ros2_ws/src/custom_icp_odom/launch/: icp_odom.launch.py
ros2_ws/src/custom_icp_odom/src/: icp_odom_node.cpp  icp_utils.cpp
ros2_ws/src/custom_ikd_tree_backend/: CMakeLists.txt  package.xml
ros2_ws/src/custom_ikd_tree_backend/config/: ikd_tree_backend.yaml
ros2_ws/src/custom_ikd_tree_backend/launch/: ikd_tree_backend.launch.py
ros2_ws/src/custom_ikd_tree_backend/src/: backend_profiler.cpp  bounding_box.cpp  ikd_tree_backend.cpp  incremental_kd_tree.cpp  kd_tree_node.cpp  map_point.cpp  pcl_rebuild_backend.cpp  voxel_hash_backend.cpp  voxel_key.cpp
ros2_ws/src/custom_imu_propagator/: CMakeLists.txt  package.xml
ros2_ws/src/custom_imu_propagator/config/: imu_propagator.yaml
ros2_ws/src/custom_imu_propagator/launch/: imu_propagator.launch.py
ros2_ws/src/custom_imu_propagator/src/: imu_propagator.cpp  imu_propagator_node.cpp
ros2_ws/src/custom_imu_propagator/test/: test_delta_quaternion.cpp  test_imu_interval_extraction.cpp  test_rotation_integration.cpp
ros2_ws/src/custom_lidar_deskew/: CMakeLists.txt  package.xml
ros2_ws/src/custom_lidar_deskew/config/: lidar_deskew.yaml
ros2_ws/src/custom_lidar_deskew/launch/: lidar_deskew.launch.py
ros2_ws/src/custom_lidar_deskew/src/: imu_integrator.cpp  lidar_deskew_node.cpp  point_time_utils.cpp
ros2_ws/src/custom_lio_ekf/: CMakeLists.txt  package.xml
ros2_ws/src/custom_lio_ekf/config/: lio_ekf.yaml
ros2_ws/src/custom_lio_ekf/launch/: lio_ekf.launch.py
ros2_ws/src/custom_lio_ekf/src/: covariance_propagation.cpp  diagnostics.cpp  ekf_parameters.cpp  ekf_state.cpp  imu_prediction.cpp  iterated_lidar_update.cpp  lidar_residual.cpp  lio_ekf_node.cpp
ros2_ws/src/custom_lio_ekf/test/: test_diagnostics.cpp  test_ekf_state.cpp  test_lidar_residual.cpp
ros2_ws/src/custom_livox_costmap_projection/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/custom_livox_costmap_projection/config/: livox_costmap_projection.yaml
ros2_ws/src/custom_livox_costmap_projection/launch/: livox_costmap_projection.launch.py
ros2_ws/src/custom_livox_costmap_projection/rviz/: phase6_costmap_projection.rviz
ros2_ws/src/custom_livox_costmap_projection/src/: livox_costmap_projection_node.cpp  occupancy_grid_builder.cpp  projection_diagnostics.cpp  projection_parameters.cpp
ros2_ws/src/custom_scan_to_map_odom/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/custom_scan_to_map_odom/config/: scan_to_map.yaml
ros2_ws/src/custom_scan_to_map_odom/launch/: scan_to_map.launch.py
ros2_ws/src/custom_scan_to_map_odom/rviz/: scan_to_map_debug.rviz
ros2_ws/src/custom_scan_to_map_odom/src/: diagnostics.cpp  local_map.cpp  local_map_manager.cpp  plane_fitter.cpp  ros_conversions.cpp  scan_to_map_node.cpp  scan_to_map_optimizer.cpp  se3_utils.cpp
ros2_ws/src/custom_scan_to_map_odom/test/: test_local_map_manager.cpp  test_plane_fitter.cpp  test_se3_utils.cpp
ros2_ws/src/fastlio2_nav2_adapter/: CMakeLists.txt  package.xml
ros2_ws/src/fastlio2_nav2_adapter/config/: fastlio2_nav2_adapter.yaml
ros2_ws/src/fastlio2_nav2_adapter/launch/: fastlio2_nav2_adapter.launch.py
ros2_ws/src/fastlio2_nav2_adapter/src/: fastlio2_nav2_adapter_node.cpp
ros2_ws/src/gamepad_adapter/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/gamepad_adapter/config/: gamepad_adapter.yaml
ros2_ws/src/gamepad_adapter/gamepad_adapter/: adapter_node.py
ros2_ws/src/gamepad_adapter/src/: adapter_node.cpp  main.cpp
ros2_ws/src/livox_cloud_to_scan/: CMakeLists.txt  package.xml
ros2_ws/src/livox_cloud_to_scan/config/: livox_cloud_to_scan.yaml
ros2_ws/src/livox_cloud_to_scan/launch/: livox_cloud_to_scan.launch.py
ros2_ws/src/livox_cloud_to_scan/src/: cloud_projector.cpp  livox_cloud_to_scan_node.cpp  livox_custom_msg_to_pointcloud2_node.cpp
ros2_ws/src/livox_cloud_to_scan/test/: cloud_projector_test.cpp
ros2_ws/src/rover_odometry/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/rover_odometry/config/: ekf.yaml  rover_odometry.yaml  rover_odometry_mapping.yaml
ros2_ws/src/rover_odometry/launch/: rover_odometry.launch.py
ros2_ws/src/rover_odometry/rover_odometry/: encoder_backend.py  encoder_odom_node.py  encoder_ticks_node.py  odometry_node.py
ros2_ws/src/rover_odometry/src/: main.cpp  odometry_node.cpp  pinpoint_i2c.cpp
ros2_ws/src/rover_odometry/test/: odometry_node_test.cpp
(+110 files in other folders)
