<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rmahajani@todo.todo">rmahajani</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>custom_fastlio_preprocess</exec_depend>
  <exec_depend>custom_lidar_deskew</exec_depend>
  <exec_depend>custom_lio_ekf</exec_depend>
  <exec_depend>custom_livox_costmap_projection</exec_depend>
  <exec_depend>fastlio2_nav2_adapter</exec_depend>
  <exec_depend>gamepad_adapter</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>livox_cloud_to_scan</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>rover_odometry</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
