<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_ikd_tree_backend</name>
  <version>0.0.0</version>
  <description>ikd-tree-inspired local map backend for Phase 12 FAST-LIO2-style development.</description>
  <maintainer email="rmahajani31@gmail.com">Rishabh Mahajani</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
